temp-egress-test-manifests/archive/same-host-different-ns/pkg-1.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ns-a
  labels:
    istio-injection: enabled
---
apiVersion: v1
kind: Service
metadata:
  name: curl1
  namespace: ns-a
  labels:
    app: curl1
    service: curl1
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: curl1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: curl1
  namespace: ns-a
spec:
  replicas: 1
  selector:
    matchLabels:
      app: curl1
  template:
    metadata:
      labels:
        app: curl1
    spec:
      terminationGracePeriodSeconds: 0
      serviceAccountName: curl1
      containers:
      - name: curl
        image: curlimages/curl
        command: ["/bin/sleep", "infinity"]
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - mountPath: /etc/curl/tls
          name: secret-volume
      volumes:
      - name: secret-volume
        secret:
          secretName: curl-secret
          optional: true
